# cpp_6

./: .gitignore  CMakeLists.txt  College.cc  College.cpp  College.h  Course.h  CoursesList.cpp  CoursesList.h  Makefile  MyList.h  PeopleList.h  Person.h  PhDStudent.h  README.md  SharedPtrSet.h  Student.h  Teacher.h  Treść  college.h  main.cc  main.cpp  regex_helper.h  tests.cc  tests.cpp
